--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,5 @@
   font-family: 'Coming Soon', Arial, Helvetica, sans-serif;
   background-image: url(./images/paper.jpg);
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
